# fumo

./: Cargo.toml  README.md  default.nix  flake.nix
examples/1/: fumosync.json  init.server.luau  types.d.luau
examples/1/pkg/: hello.luau
src/: client.rs  error.rs  login.rs  main.rs  project.rs
