[package]
name = "fumosync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
reqwest = { version = "0.12.8" }
serde = { version = "1.0.210", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
	"fetch",
] }
directories = "5.0.1"
thiserror = "1.0.64"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
