[package]
name = "fumo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.9" }
serde = { version = "1.0.216", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
	"fetch",
] }
directories = "5.0.1"
thiserror = "2.0.7"
chrono = { version = "0.4.39", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
notify-debouncer-full = { version = "0.4.0", default-features = false, features = [
] }
git-version = "0.3.9"
