[package]
name = "fumo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12.15" }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
tokio = { version = "1.44.2", features = ["full"] }
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
	"fetch",
] }
directories = "6.0.0"
thiserror = "2.0.12"
chrono = { version = "0.4.40", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
notify-debouncer-full = { version = "0.5.0", default-features = false }
git-version = "0.3.9"
